# pod

./: .gitignore  CLAUDE.md  LICENSE  README.md
Pod/: AudioPlayerViewModel.swift  ClickWheel.swift  ContentView.swift  ExternalMusicView.swift  Info.plist  ItunesView.swift  Pod.entitlements  PodApp.swift  SettingsView.swift  SongView.swift  SongViewModel.swift
Pod.xcodeproj/: project.pbxproj
Pod/Album/: AlbumView.swift  AlbumViewModel.swift
Pod/Licensing/: LicenseActivationView.swift  LicenseManager.swift  LicenseWindowManager.swift
Pod/MainMenu/: MainMenuView.swift  MainMenuViewModel.swift
Pod/Model/: Album.swift  AlbumsView.swift  MenuBar.swift  OnboardingScreenModel.swift  ProtocolViewModel.swift  Screen.swift  Song.swift  SourceFilter.swift
Pod/Onboarding/: LicenseSetupScreen.swift  Onboarding.swift  OnboardingViewModel.swift
Pod/Resources/: spotify-player.html
Pod/Settings/: ContactUs.swift  GeneralSettings.swift  RadioSettings.swift  SettingsComponents.swift  SettingsView.swift
Pod/Song/: LoadAudioFiles.swift  PlaybackProvider.swift  SongView.swift  SongViewModel.swift
Pod/Spotify/: SpotifyBridge.swift  SpotifyModels.swift  SpotifyService.swift  SpotifySettings.swift
Pod/State/: BatteryMonitor.swift  GlobalState.swift  SoundManager.swift
Pod/Updates/: UpdateChecker.swift
PodTests/: PodTests.swift
PodUITests/: PodUITests.swift  PodUITestsLaunchTests.swift
pod-spotify-bridge/: Cargo.toml
pod-spotify-bridge/src/: auth.rs  main.rs  metadata.rs  playback.rs  protocol.rs
scripts/: release.sh
server/: licenseKeyGenerator.js
(+23 files in other folders)
